Fix spacing comunicate

--- a/src/less/site.less
+++ b/src/less/site.less
@@ -219,7 +219,7 @@ input {
 }
 
 .comunicate {
-  padding: 40px 0;
+  padding: 50px 0 80px;
 
   h1 {
     margin-top: 0;
